<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/title_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="start"
		android:paddingHorizontal="16dp"
		android:paddingTop="8dp">

		<TextView
			android:id="@+id/title_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="@string/mai"
			android:textSize="16sp"
			android:textStyle="bold"
			/>

		<View
			android:layout_width="0dp"
			android:layout_height="2dp"
			android:layout_weight="1"
			android:background="@color/foreground"
			android:layout_marginTop="16dp"
			android:layout_marginStart="2dp"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingVertical="10dp"
		android:paddingHorizontal="16dp">

		<TextView
			android:id="@+id/tvDate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_weight="0.17"
			tools:text="@string/datum_placeholder"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginEnd="16dp"/>

		<LinearLayout
			android:id="@+id/taskText"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginEnd="16dp">

			<TextView
				android:id="@+id/tvName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:text="@string/feladat"
				android:textSize="16sp"
				android:textStyle="bold"
				android:ellipsize="end"
				android:maxLines="1"
				/>

			<TextView
				android:id="@+id/tvDetails"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:text="@string/leiras"
				android:textSize="14sp"
				android:maxLines="2"
				android:ellipsize="end"
				/>

		</LinearLayout>

		<ImageView
			android:id="@+id/btnDelete"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:src="@drawable/ic_delete_grey600_48dp"
			android:layout_gravity="center_vertical"
		/>

	</LinearLayout>
</LinearLayout>